crates/qwik-optimizer-oxc/tests/snapshots/should_transform_component_with_normal_function.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { $, component$, useSignal, Signal } from "@qwik.dev/core";
const Foo = component$(function () {
  const data = useSignal<Signal<any>[]>([]);
  const Inner = component$(function (props) {
    const data = props.data;
    return (
      <div>
        {data.value.map((item) => (
          <p onClick$={() => console.log(item.value.id)}>{item.value.id}</p>
        ))}
      </div>
    );
  });
  return <Inner data={data} />;
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Foo_component_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./test.tsx_Inner_component_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./test.tsx_Inner_component_p_q_e_click_XXXXXXXXXXXX");
import { useSignal } from "@qwik.dev/core";
import { Signal } from "@qwik.dev/core";
const Foo = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Foo_component_XXXXXXXXXXXX"),
);

=== test.tsx_Foo_component_XXXXXXXXXXXX.js === (ENTRY)
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Inner_component_XXXXXXXXXXXX");
import { componentQrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
import { Signal } from "@qwik.dev/core";
export const Foo_component_XXXXXXXXXXXX = function () {
  const data = useSignal < Signal < any > [] > [];
  const Inner = /* @__PURE__ */ componentQrl(
    /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Inner_component_XXXXXXXXXXXX", [props, item]),
  );
  return /* @__PURE__ */ _jsxSorted(Inner, { data }, null, null, 3, "u6_2");
};

/*
{
  "origin": "test.tsx",
  "name": "Foo_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Foo_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Foo_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== test.tsx_Inner_component_XXXXXXXXXXXX.js === (ENTRY)
import { _captures } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Inner_component_p_q_e_click_XXXXXXXXXXXX");
import { _jsxSorted } from "@qwik.dev/core";
export const Inner_component_XXXXXXXXXXXX = function (props) {
  const data = props.data;
  return /* @__PURE__ */ _jsxSorted(
    "div",
    null,
    null,
    data.value.map((item) =>
      /* @__PURE__ */ _jsxSorted(
        "p",
        null,
        {
          "q-e:click": /* @__PURE__ */ qrl(
            i_XXXXXXXXXXXX,
            "Inner_component_p_q_e_click_XXXXXXXXXXXX",
          ),
        },
        item.value.id,
        3,
        "u6_0",
      ),
    ),
    3,
    "u6_1",
  );
};

/*
{
  "origin": "test.tsx",
  "name": "Inner_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Inner_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Inner_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "test.tsx_Foo_component",
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": true,
  "captureNames": [
    "props",
    "item"
  ]
}
*/

=== test.tsx_Inner_component_p_q_e_click_XXXXXXXXXXXX.js === (ENTRY)
export const Inner_component_p_q_e_click_XXXXXXXXXXXX = () => console.log(item.value.id);

/*
{
  "origin": "test.tsx",
  "name": "Inner_component_p_q_e_click_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Inner_component_p_q_e_click",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Inner_component_p_q_e_click_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "test.tsx_Inner_component",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false
}
*/

=== DIAGNOSTICS ===

[]
