crates/qwik-optimizer-oxc/tests/snapshots/should_transform_event_names_without_jsx_transpile.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { component$, $ } from "@qwik.dev/core";
import mongo from "mongodb";

export const Greeter = component$(() => {
  // Double count watch
  useTask$(async () => {
    await mongo.users();
  });
  return (
    <div>
      <div onClick$={() => {}} />
      <div onClick$={() => {}} />
      <div onClick$={() => {}} />
    </div>
  );
});

=== test.tsx ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_l5Al0251s9w = () => import("./test.tsx_Greeter_component_l5Al0251s9w");
const i_Rxdt6XL5GRU = () => import("./test.tsx_Greeter_component_div_q_e_click_Rxdt6XL5GRU");
const i_Rxdt6XL5GRU = () => import("./test.tsx_Greeter_component_div_q_e_click_Rxdt6XL5GRU");
const i_Rxdt6XL5GRU = () => import("./test.tsx_Greeter_component_div_q_e_click_Rxdt6XL5GRU");
import mongo from "mongodb";
export const Greeter = /* @__PURE__ */ componentQrl(/* @__PURE__ */ qrl(i_l5Al0251s9w, "Greeter_component_l5Al0251s9w"));

=== test.tsx_Greeter_component_l5Al0251s9w.tsx === (ENTRY)
import { qrl } from "@qwik.dev/core";
const i_Rxdt6XL5GRU = () => import("./test.tsx_Greeter_component_div_q_e_click_Rxdt6XL5GRU");
const i_Rxdt6XL5GRU = () => import("./test.tsx_Greeter_component_div_q_e_click_Rxdt6XL5GRU");
const i_Rxdt6XL5GRU = () => import("./test.tsx_Greeter_component_div_q_e_click_Rxdt6XL5GRU");
import mongo from "mongodb";
export const Greeter_component_l5Al0251s9w = () => {
	useTask$(async () => {
		await mongo.users();
	});
	return <div>
      <div onClick$={/* @__PURE__ */ qrl(i_Rxdt6XL5GRU, "Greeter_component_div_q_e_click_Rxdt6XL5GRU")} />
      <div onClick$={/* @__PURE__ */ qrl(i_Rxdt6XL5GRU, "Greeter_component_div_q_e_click_Rxdt6XL5GRU")} />
      <div onClick$={/* @__PURE__ */ qrl(i_Rxdt6XL5GRU, "Greeter_component_div_q_e_click_Rxdt6XL5GRU")} />
    </div>;
}

/*
{
  "origin": "test.tsx",
  "name": "Greeter_component_l5Al0251s9w",
  "entry": null,
  "displayName": "test.tsx_Greeter_component",
  "hash": "l5Al0251s9w",
  "canonicalFilename": "test.tsx_Greeter_component_l5Al0251s9w",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== test.tsx_Greeter_component_div_q_e_click_Rxdt6XL5GRU.tsx === (ENTRY)
export const Greeter_component_div_q_e_click_Rxdt6XL5GRU = () => {};

/*
{
  "origin": "test.tsx",
  "name": "Greeter_component_div_q_e_click_Rxdt6XL5GRU",
  "entry": null,
  "displayName": "test.tsx_Greeter_component_div_q_e_click",
  "hash": "Rxdt6XL5GRU",
  "canonicalFilename": "test.tsx_Greeter_component_div_q_e_click_Rxdt6XL5GRU",
  "path": "",
  "extension": "tsx",
  "parent": "test.tsx_Greeter_component",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false
}
*/

=== test.tsx_Greeter_component_div_q_e_click_Rxdt6XL5GRU.tsx === (ENTRY)
export const Greeter_component_div_q_e_click_Rxdt6XL5GRU = () => {};

/*
{
  "origin": "test.tsx",
  "name": "Greeter_component_div_q_e_click_Rxdt6XL5GRU",
  "entry": null,
  "displayName": "test.tsx_Greeter_component_div_q_e_click",
  "hash": "Rxdt6XL5GRU",
  "canonicalFilename": "test.tsx_Greeter_component_div_q_e_click_Rxdt6XL5GRU",
  "path": "",
  "extension": "tsx",
  "parent": "test.tsx_Greeter_component",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false
}
*/

=== test.tsx_Greeter_component_div_q_e_click_Rxdt6XL5GRU.tsx === (ENTRY)
export const Greeter_component_div_q_e_click_Rxdt6XL5GRU = () => {};

/*
{
  "origin": "test.tsx",
  "name": "Greeter_component_div_q_e_click_Rxdt6XL5GRU",
  "entry": null,
  "displayName": "test.tsx_Greeter_component_div_q_e_click",
  "hash": "Rxdt6XL5GRU",
  "canonicalFilename": "test.tsx_Greeter_component_div_q_e_click_Rxdt6XL5GRU",
  "path": "",
  "extension": "tsx",
  "parent": "test.tsx_Greeter_component",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false
}
*/
