crates/qwik-optimizer-oxc/tests/snapshots/should_transform_multiple_event_handlers_case2.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { component$, useSignal, Signal } from "@qwik.dev/core";
const Foo = component$(function () {
  const data = useSignal<Signal<any>[]>([]);
  return (
    <div>
      {data.value.map((row, idx) => (
        <div
          onClick$={() => console.log(row.value.id, idx)}
          onMouseOver$={() => console.log("over" + row.value.id)}
        >
          <p onClick$={() => console.log("inner" + row.value.id)}>{item.value.id}</p>
        </div>
      ))}
    </div>
  );
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Foo_component_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./test.tsx_Foo_component_div_q_e_click_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./test.tsx_Foo_component_div_q_e_mouseover_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./test.tsx_Foo_component_p_q_e_click_XXXXXXXXXXXX");
import { useSignal } from "@qwik.dev/core";
import { Signal } from "@qwik.dev/core";
const Foo = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Foo_component_XXXXXXXXXXXX"),
);

=== test.tsx_Foo_component_XXXXXXXXXXXX.js === (ENTRY)
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Foo_component_div_q_e_click_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./test.tsx_Foo_component_div_q_e_mouseover_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./test.tsx_Foo_component_p_q_e_click_XXXXXXXXXXXX");
import { _jsxSorted } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
import { Signal } from "@qwik.dev/core";
export const Foo_component_XXXXXXXXXXXX = function () {
  const data = useSignal < Signal < any > [] > [];
  return /* @__PURE__ */ _jsxSorted(
    "div",
    null,
    null,
    data.value.map((row, idx) =>
      /* @__PURE__ */ _jsxSorted(
        "div",
        null,
        {
          "q-e:click": /* @__PURE__ */ qrl(
            i_XXXXXXXXXXXX,
            "Foo_component_div_q_e_click_XXXXXXXXXXXX",
          ),
          "q-e:mouseover": /* @__PURE__ */ qrl(
            i_XXXXXXXXXXXX,
            "Foo_component_div_q_e_mouseover_XXXXXXXXXXXX",
          ),
        },
        /* @__PURE__ */ _jsxSorted(
          "p",
          null,
          {
            "q-e:click": /* @__PURE__ */ qrl(
              i_XXXXXXXXXXXX,
              "Foo_component_p_q_e_click_XXXXXXXXXXXX",
            ),
          },
          item.value.id,
          3,
          "u6_0",
        ),
        3,
        "u6_1",
      ),
    ),
    3,
    "u6_2",
  );
};

/*
{
  "origin": "test.tsx",
  "name": "Foo_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Foo_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Foo_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== test.tsx_Foo_component_div_q_e_click_XXXXXXXXXXXX.js === (ENTRY)
export const Foo_component_div_q_e_click_XXXXXXXXXXXX = () => console.log(row.value.id, idx);

/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_q_e_click_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_q_e_click",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Foo_component_div_q_e_click_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "test.tsx_Foo_component",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false
}
*/

=== test.tsx_Foo_component_div_q_e_mouseover_XXXXXXXXXXXX.js === (ENTRY)
export const Foo_component_div_q_e_mouseover_XXXXXXXXXXXX = () => console.log("over" + row.value.id);

/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_q_e_mouseover_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_q_e_mouseover",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Foo_component_div_q_e_mouseover_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "test.tsx_Foo_component",
  "ctxKind": "eventHandler",
  "ctxName": "onMouseOver$",
  "captures": false
}
*/

=== test.tsx_Foo_component_p_q_e_click_XXXXXXXXXXXX.js === (ENTRY)
export const Foo_component_p_q_e_click_XXXXXXXXXXXX = () => console.log("inner" + row.value.id);

/*
{
  "origin": "test.tsx",
  "name": "Foo_component_p_q_e_click_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Foo_component_p_q_e_click",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Foo_component_p_q_e_click_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "test.tsx_Foo_component",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false
}
*/

=== DIAGNOSTICS ===

[]
