crates/qwik-optimizer-oxc/tests/snapshots/should_transform_nested_loops.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { component$, useSignal, Signal } from "@qwik.dev/core";
const Foo = component$(function () {
  const data = useSignal<Signal<any>[]>([]);
  const data2 = useSignal<Signal<any>[]>([]);
  return (
    <div>
      {data.value.map((row) => (
        <div onClick$={() => console.log(row.value.id)}>
          {data2.value.map((item) => (
            <p onClick$={() => console.log(row.value.id, item.value.id)}>
              {row.value.id}-{item.value.id}
            </p>
          ))}
        </div>
      ))}
    </div>
  );
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
const i_gZqPatVoDqw = () => import("./test.tsx_Foo_component_gZqPatVoDqw");
const i_MWp7oW4SJcQ = () => import("./test.tsx_Foo_component_p_q_e_click_MWp7oW4SJcQ");
const i_OJboCLusyIA = () => import("./test.tsx_Foo_component_div_q_e_click_OJboCLusyIA");
import { useSignal } from "@qwik.dev/core";
import { Signal } from "@qwik.dev/core";
const Foo = /* @__PURE__ */ componentQrl(/* @__PURE__ */ qrl(i_gZqPatVoDqw, "Foo_component_gZqPatVoDqw"));

=== test.tsx_Foo_component_gZqPatVoDqw.js === (ENTRY)
import { qrl } from "@qwik.dev/core";
const i_MWp7oW4SJcQ = () => import("./test.tsx_Foo_component_p_q_e_click_MWp7oW4SJcQ");
const i_OJboCLusyIA = () => import("./test.tsx_Foo_component_div_q_e_click_OJboCLusyIA");
import { _jsxSorted } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
import { Signal } from "@qwik.dev/core";
export const Foo_component_gZqPatVoDqw = (function() {
	const data = useSignal < Signal < any > [] > [];
	const data2 = useSignal < Signal < any > [] > [];
	return /* @__PURE__ */ _jsxSorted("div", null, null, data.value.map((row) => /* @__PURE__ */ _jsxSorted("div", null, { "q-e:click": /* @__PURE__ */ qrl(i_OJboCLusyIA, "Foo_component_div_q_e_click_OJboCLusyIA") }, data2.value.map((item) => /* @__PURE__ */ _jsxSorted("p", null, { "q-e:click": /* @__PURE__ */ qrl(i_MWp7oW4SJcQ, "Foo_component_p_q_e_click_MWp7oW4SJcQ") }, [
		row.value.id,
		"-",
		item.value.id
	], 1, "u6_0")), 3, "u6_1")), 3, "u6_2");
});

/*
{
  "origin": "test.tsx",
  "name": "Foo_component_gZqPatVoDqw",
  "entry": null,
  "displayName": "test.tsx_Foo_component",
  "hash": "gZqPatVoDqw",
  "canonicalFilename": "test.tsx_Foo_component_gZqPatVoDqw",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== test.tsx_Foo_component_p_q_e_click_MWp7oW4SJcQ.js === (ENTRY)
export const Foo_component_p_q_e_click_MWp7oW4SJcQ = () => console.log(row.value.id, item.value.id);

/*
{
  "origin": "test.tsx",
  "name": "Foo_component_p_q_e_click_MWp7oW4SJcQ",
  "entry": null,
  "displayName": "test.tsx_Foo_component_p_q_e_click",
  "hash": "MWp7oW4SJcQ",
  "canonicalFilename": "test.tsx_Foo_component_p_q_e_click_MWp7oW4SJcQ",
  "path": "",
  "extension": "js",
  "parent": "test.tsx_Foo_component",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false
}
*/

=== test.tsx_Foo_component_div_q_e_click_OJboCLusyIA.js === (ENTRY)
export const Foo_component_div_q_e_click_OJboCLusyIA = () => console.log(row.value.id);

/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_q_e_click_OJboCLusyIA",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_q_e_click",
  "hash": "OJboCLusyIA",
  "canonicalFilename": "test.tsx_Foo_component_div_q_e_click_OJboCLusyIA",
  "path": "",
  "extension": "js",
  "parent": "test.tsx_Foo_component",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false
}
*/
